--- a/css/style.css
+++ b/css/style.css
@@ -100,26 +100,53 @@ td {
 
 .leaflet-leftpane {
 	left: 5px;
-  top: 7px;
-  bottom: 7px;
+    top: 7px;
+    bottom: 7px;
 
-  /*
-  height: 100%;
-  display:table;
-  */
-  position: absolute;
-  z-index: 1000;
-  pointer-events: none;
+    position: absolute;
+    z-index: 1000;
+    pointer-events: none;
 }
 
 .leaflet-leftpane .leaflet-control {
-  margin: 3px 5px;
-  width: 370px;
+    margin: 3px 5px;
+    width: 370px;
 }
 
-/* TODO hack to maximize last div, further table-row tests, check out flex box */
+/* Profile Control */
+
 .leaflet-leftpane .leaflet-control:last-child {
     position: absolute;
     top: 432px;
     bottom: 0px;
+}
+
+#profile_upload input {
+    position: absolute;
+    top: 6px;
+    right: 8px;
+}
+
+/* http://snook.ca/archives/html_and_css/absolute-position-textarea */
+#textarea_container {
+    position: absolute;
+    top: 32px;
+    bottom: 6px;
+    left: 8px;
+    right: 8px;
+
+}
+textarea {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+
+    font-size: 10px;
+    font-family: "Courier New", Courier, monospace;
+    line-height: 1.2em;
+
+    background-color: rgba(255,255,255,0);
+}
+textarea:focus {
+    background-color: rgba(255,255,255,255);
 }
