--- a/css/leaflet-routing.css
+++ b/css/leaflet-routing.css
@@ -1,5 +1,5 @@
 div.line-mouse-marker {
   background-color: #ffffff;
-  border: 2px solid black;
-  border-radius: 10px;
+  border: 4px solid rgba(0, 51, 255, 0.6);
+  border-radius: 8px;
 }
