--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ https://css-tricks.com/svg-line-animation-works/
 /* invert track and selection styles to get partial gradient for "selection" */
 .slider.slider-vertical .slider-track {
     width: 8px;
-    margin-left: -4px;
+    margin-left: 1px;
     background-image: linear-gradient(to right, #f0f0f0 0%, #e9e9e9 100%);
     box-shadow: inset -1px -0px 1px rgba(55, 55, 55, 0.3), inset 1px 0px 1px rgba(230, 230, 230, 1);
 }
@@ -169,10 +169,10 @@ https://css-tricks.com/svg-line-animation-works/
 
 .slider.slider-vertical .slider-tick,
 .slider.slider-vertical .slider-handle {
-    margin-left: -6px;
     cursor: ns-resize;
     box-sizing: border-box;
     background: none;
+    outline: none;
 
     /* bootstrap .btn-default */
     background-image: linear-gradient(to bottom,#fff 0,#e0e0e0 100%);
