Restore 3-digit distance title (see #38) removed with PR #56

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,8 @@ footer {
     word-break: break-all;
     font-weight: bold;
 }
-.stats-label abbr[title] {
+.stats-label abbr[title],
+#distance {
     text-decoration: none;
     border-bottom: 1px dotted #818a91;
 }
