Fix message margin preventing full-size sidebar (previous commit)

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,6 @@ footer {
     justify-content: center;
 }
 #message {
-    margin: 10px 46px; /* 10 + 26 + 10 */
     z-index: 3000;
     font-size: 1rem;
 }
@@ -224,6 +223,10 @@ https://css-tricks.com/svg-line-animation-works/
 /* smaller tab height */
 .nav > li > a {
     padding: 2px 15px;
+}
+
+#message .alert {
+    margin: 10px 46px; /* 10 + 26 + 10 */
 }
 
 #profile_message .alert {
