--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,11 @@ table.dataTable {
     margin-right: 0;
 }
 
+/* disabled style for "Custom" option, but not for selected items */
+.bootstrap-select.btn-group .dropdown-menu li.disabled:not(.selected) a {
+    color: #777;
+}
+
 footer {
     flex: none;
 
