Improve footer layout on small screens (#66)
- smaller spacing to fit three numbers in line instead of two
- adjust margin/padding when description is hidden

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,17 @@ footer {
     margin: 0 1rem;
     display: inline-block;
 }
+@media (max-width: 767px) {
+    #stats li {
+        margin: 0 0.5rem;
+    }
+    #stats {
+        padding-top: 0.4em;
+    }
+    p.stats-label {
+        margin-bottom: 0.4em;
+    }
+}
 
 .stats-label {
     word-break: break-all;
