Allow contents to shrink when minimized
Use-case is brouter-web navbar menu expanding and hiding map on mobile, 
but tabs remained.

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body, #content {
     z-index: 1;
 }
 
+#content {
+    overflow: hidden;
+}
+
 .flexcolumn,
 .leaflet-sidebar-pane.active,
 .dataTables_wrapper,
