--- a/css/style.css
+++ b/css/style.css
@@ -390,10 +390,12 @@ table.dataTable.display tbody tr.even:hover {
 }
 
 /* layers control as sidebar tab */
-#layers-control-wrapper label {
+#layers-control-wrapper label,
+#optional-layers-tree {
     font-size: 0.9rem;
     line-height: normal;
-
+}
+#layers-control-wrapper label {
     /* override Bootstrap/Reboot label */
     display: block;
     margin-bottom: 0px;
@@ -403,6 +405,11 @@ table.dataTable.display tbody tr.even:hover {
        Bootstrap    | 23      | 22     |*/
     height: 23px;
 }
+
+#optional-layers-tree {
+    margin-top: 5px;
+}
+
 
 /* hide currently unused bottom tabs container because of touch border artefacts */
 .leaflet-sidebar-tabs > ul:last-child {
